# Carbon-Footprint-Calculator

./: .gitignore  DISCLAIMER.md  README.md  demo_quick.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
demo/: app.py
notebooks/: demo.ipynb
scripts/: train.py
src/: __init__.py  data.py  evaluation.py  models.py
tests/: test_models.py
